// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-inputID"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      checked={false}
      className="chakra-checkbox__input"
      disabled={false}
      id="inputID"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-checkbox-checked"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    data-checked=""
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      checked={true}
      className="chakra-checkbox__input"
      disabled={false}
      id="checkbox-checked"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      data-checked=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <svg
        aria-hidden={true}
        className="chakra-icon css-12vjkgh"
        data-file-name="SvgUtilityCheck"
        focusable={false}
        role="img"
        title="utilityCheck icon"
      />
    </span>
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      data-checked=""
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-checkbox-checked"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    data-checked=""
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      checked={true}
      className="chakra-checkbox__input"
      disabled={false}
      id="checkbox-checked"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      data-checked=""
      data-indeterminate=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="css-0"
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <svg
          className="css-1w6vdd7"
          style={
            {
              "stroke": "currentColor",
              "strokeWidth": 4,
            }
          }
          viewBox="0 0 24 24"
        >
          <line
            x1="21"
            x2="3"
            y1="12"
            y2="12"
          />
        </svg>
      </div>
    </span>
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      data-checked=""
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-checkbox-required"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      checked={false}
      className="chakra-checkbox__input"
      disabled={false}
      id="checkbox-required"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={true}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-checkbox-invalid"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    data-invalid=""
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={true}
      checked={false}
      className="chakra-checkbox__input"
      disabled={false}
      id="checkbox-invalid"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      data-invalid=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      data-invalid=""
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-checkbox-disabled"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    data-disabled=""
    onClick={[Function]}
  >
    <input
      aria-disabled={true}
      aria-invalid={false}
      checked={false}
      className="chakra-checkbox__input"
      disabled={true}
      id="checkbox-disabled"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      data-disabled=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      data-disabled=""
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-jsxLabel"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      checked={false}
      className="chakra-checkbox__input"
      disabled={false}
      id="jsxLabel"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
      value="arts"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      onMouseDown={[Function]}
    >
      <div
        className="css-k008qs"
      >
        <span>
          Arts
        </span>
        <div
          className="css-17xejub"
        />
        <span>
          4
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 8`] = `
<div
  className="css-1xdhyk6"
  id="ds-componentWrapper-checkbox-chakra"
>
  <label
    className="chakra-checkbox css-1t0bvx9"
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      checked={false}
      className="chakra-checkbox__input"
      disabled={false}
      id="checkbox-chakra"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;

exports[`Checkbox renders the UI snapshot correctly 9`] = `
<div
  className="css-1xdhyk6"
  data-testid="testid"
  id="ds-componentWrapper-checkbox-props"
>
  <label
    className="chakra-checkbox css-1xdhyk6"
    onClick={[Function]}
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      checked={false}
      className="chakra-checkbox__input"
      disabled={false}
      id="checkbox-props"
      name="default"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        {
          "border": "0",
          "clip": "rect(0, 0, 0, 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="checkbox"
    />
    <span
      aria-hidden={true}
      className="chakra-checkbox__control css-dnty2r"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-checkbox__label css-1oeb2oe"
      onMouseDown={[Function]}
    >
      Test Label
    </span>
  </label>
</div>
`;
